docs/istio-tls-certificate/echo-apple.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
  - port: 5678 # Default port for image
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apple-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - sample-gateway
  http:
    - route:
      - destination:
          host: apple-service
          port:
            number: 5678
